# MeshDeWarper

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  api_reference.html  calibration_guide.html  contribution_guide.html  developer_guide.html  genindex.html  index.html  installation.html  objects.inv  plugin.json  py-modindex.html  pyproject.toml  release_guide.html  search.html  searchindex.js  setup.cfg  testing_guide.html  user_guide.html  vision_guide.html
.doctrees/: api_reference.doctree  calibration_guide.doctree  contribution_guide.doctree  developer_guide.doctree  index.doctree  installation.doctree  release_guide.doctree  testing_guide.doctree  user_guide.doctree  vision_guide.doctree
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  release.yml
_modules/: index.html
_modules/mesh_de_warper/: plugin.html
_modules/mesh_de_warper/core/: calibration.html  mesh.html  point.html  profile.html
_modules/mesh_de_warper/gcode/: ast.html  emitter.html  parser.html  warper.html
_modules/mesh_de_warper/interpolation/: base.html  bicubic.html  bilinear.html  rbf.html  tps.html
_modules/mesh_de_warper/patterns/: base.html  pdf_generator.html  stl_generator.html  svg_generator.html
_modules/mesh_de_warper/vision/: calibration.html  correction.html  detection.html
_sources/: api_reference.rst.txt  calibration_guide.rst.txt  user_guide.rst.txt
docs/: api_reference.rst  conf.py  contribution_guide.rst  developer_guide.rst  index.rst  installation.rst  release_guide.rst  testing_guide.rst  user_guide.rst  vision_guide.rst
scripts/: build_curaplugin.py
src/cura_xy_calibration/: __init__.py  __version__.py  plugin.py
src/cura_xy_calibration/core/: __init__.py  calibration.py  mesh.py  point.py  profile.py
src/cura_xy_calibration/gcode/: __init__.py  ast.py  emitter.py  parser.py  warper.py
src/cura_xy_calibration/interpolation/: __init__.py  base.py  bicubic.py  bilinear.py  rbf.py  tps.py
src/cura_xy_calibration/patterns/: __init__.py  pdf_generator.py  stl_generator.py  svg_generator.py
src/cura_xy_calibration/ui/: __init__.py
src/cura_xy_calibration/vision/: __init__.py  calibration.py  correction.py  detection.py
src/cura_xy_calibration/visualization/: __init__.py  heatmap.py  preview.py  vector_field.py
src/mesh_de_warper/: __init__.py  __version__.py  plugin.py
src/mesh_de_warper/core/: __init__.py  calibration.py  mesh.py  profile.py
src/mesh_de_warper/gcode/: __init__.py  ast.py  emitter.py  parser.py  warper.py
src/mesh_de_warper/interpolation/: __init__.py  base.py  bicubic.py  bilinear.py  rbf.py  tps.py
src/mesh_de_warper/patterns/: __init__.py  base.py  pdf_generator.py  stl_generator.py  svg_generator.py
src/mesh_de_warper/ui/: __init__.py  editor.py  profile_manager.py
src/mesh_de_warper/vision/: __init__.py  calibration.py  correction.py  detection.py
src/mesh_de_warper/visualization/: __init__.py  heatmap.py  preview.py  vector_field.py
tests/: conftest.py  test_bicubic_interpolation.py  test_bilinear_interpolation.py  test_calibration.py  test_gcode_ast.py  test_gcode_emitter.py  test_gcode_parser.py  test_gcode_warper.py  test_mesh.py  test_patterns.py  test_plugin.py  test_point.py  test_profile.py  test_rbf_interpolation.py  test_tps_interpolation.py  test_ui.py  test_version.py  test_vision.py  test_vision_detection.py  test_visualization.py
tests/integration/: test_gcode_pipeline.py
tests/unit/: test_interpolation_accuracy.py
