[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MeshDeWarper"
version = "0.2.0"
description = "Full XY distortion calibration plugin for Ultimaker Cura"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "MeshDeWarper Contributors"},
]
keywords = ["cura", "3d-printing", "calibration", "distortion-correction", "g-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Printing",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "numpy-stl>=3.0",
    "reportlab>=4.1",
    "svgwrite>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.0",
    "ruff>=0.5.0",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "safety>=3.0",
    "sphinx>=7.3",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "types-setuptools>=69.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.0",
]
qt = [
    "PyQt5>=5.15",
]
docs = [
    "sphinx>=7.3",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]
vision = [
    "opencv-python-headless>=4.9",
    "scikit-image>=0.23",
]
all = [
    "MeshDeWarper[dev,test,qt,docs,vision]",
]

[project.urls]
Homepage = "https://github.com/Jofralso/MeshDeWarper"
Repository = "https://github.com/Jofralso/MeshDeWarper"
Documentation = "https://github.com/Jofralso/MeshDeWarper#readme"
Issues = "https://github.com/Jofralso/MeshDeWarper/issues"

[project.scripts]
meshdewarper = "mesh_de_warper.plugin:register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mesh_de_warper*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "D",        # pydocstyle
    "UP",       # pyupgrade
    "YTT",      # flake8-2020
    "ANN",      # flake8-annotations
    "S",        # flake8-bandit
    "BLE",      # flake8-blind-except
    "RUF",      # ruff-specific
]
ignore = [
    "D107",  # init docstring
    "D203",  # 1 blank line before docstring
    "D213",  # multi-line summary
    "D401",  # imperative mood
    "ANN101", # self type annotation
    "ANN102", # cls type annotation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # assert allowed in tests
    "D101",   # no docstring required on test class
    "D102",   # no docstring required on test method
    "D103",   # no docstring required on test function
    "ANN001", # no type annotation required in tests
    "ANN201", # no return type annotation in tests
    "ANN202", # no return type annotation in tests
    "ANN204", # no return type annotation in tests
    "BLE001", # blind except allowed in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-config",
    "--strict-markers",
    "-p", "no:cacheprovider",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "vision: Computer vision tests",
    "gcode: G-code tests",
    "interpolation: Interpolation tests",
    "ui: UI tests",
]

[tool.coverage.run]
source = ["mesh_de_warper"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[tool.bandit]
exclude_dirs = ["tests", "docs", ".github"]
skips = ["B101", "B303", "B311"]
