[metadata]
name = CuraXYCalibration
version = 0.1.0
description = Full XY distortion calibration plugin for Ultimaker Cura
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cura-xy-calibration/CuraXYCalibration
author = CuraXYCalibration Contributors
license = AGPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Manufacturing
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Printing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    numpy>=1.26
    scipy>=1.13

[options.packages.find]
where = src
